V2.7.0.10 - Fix navbar menu item text colour when collapsed.

--- a/less/moodlechanges.less
+++ b/less/moodlechanges.less
@@ -377,7 +377,7 @@ table.generaltable {
 @media (max-width: 979px) {
     .nav-collapse {
         .nav > li > a {
-            color: @textColor;
+            color: @navbarText;
         }
         .nav > li > a:hover,
         .nav > li > a:focus,
@@ -390,7 +390,7 @@ table.generaltable {
         .dropdown-menu > li > a:focus,
         {
             background-image: none;
-            color: @textColor;
+            color: @navbarText;
         }
     }
 }
